src/re2c-scanner-c.cc
/* Generated by re2c 1.1.1 on Sat Nov 24 22:35:30 2018 */
#line 1 "re2c-scanner-c.re"
/*
This file is part of P2X.
Copyright © 2018 Johannes Willkomm
See the file p2x.cc for copying conditions.
*/

#include "token.ncd.enum.hh"
#include <string.h>

#define YYMAXFILL 4


typedef unsigned char uint8_t;

int re2c_scanner_c_lex(const uint8_t *&s, const uint8_t *&m, uint8_t const * lim)
{

  

  lim += YYMAXFILL;

    
#line 26 "re2c-scanner-c.cc"
{
	uint8_t yych;
	unsigned int yyaccept = 0;
	if ((lim - s) < 4) return false;
	yych = *s;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':	goto yy6;
	case '\n':	goto yy8;
	case '\r':	goto yy10;
	case ' ':	goto yy12;
	case '!':	goto yy15;
	case '"':	goto yy17;
	case '#':	goto yy18;
	case '$':	goto yy20;
	case '%':	goto yy22;
	case '&':	goto yy24;
	case '\'':	goto yy26;
	case '(':	goto yy27;
	case ')':	goto yy29;
	case '*':	goto yy31;
	case '+':	goto yy33;
	case ',':	goto yy35;
	case '-':	goto yy37;
	case '.':	goto yy39;
	case '/':	goto yy41;
	case '0':	goto yy43;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	case ':':	goto yy47;
	case ';':	goto yy49;
	case '<':	goto yy51;
	case '=':	goto yy53;
	case '>':	goto yy55;
	case '?':	goto yy57;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy59;
	case '[':	goto yy62;
	case '\\':	goto yy64;
	case ']':	goto yy66;
	case '^':	goto yy68;
	case '{':	goto yy70;
	case '|':	goto yy72;
	case '}':	goto yy74;
	case '~':	goto yy76;
	case 0xC0:
	case 0xC1:
	case 0xC2:
	case 0xC3:
	case 0xC4:
	case 0xC5:
	case 0xC6:
	case 0xC7:
	case 0xC8:
	case 0xC9:
	case 0xCA:
	case 0xCB:
	case 0xCC:
	case 0xCD:
	case 0xCE:
	case 0xCF:
	case 0xD0:
	case 0xD1:
	case 0xD2:
	case 0xD3:
	case 0xD4:
	case 0xD5:
	case 0xD6:
	case 0xD7:
	case 0xD8:
	case 0xD9:
	case 0xDA:
	case 0xDB:
	case 0xDC:
	case 0xDD:
	case 0xDE:
	case 0xDF:	goto yy78;
	case 0xE0:
	case 0xE1:
	case 0xE2:
	case 0xE3:
	case 0xE4:
	case 0xE5:
	case 0xE6:
	case 0xE7:
	case 0xE8:
	case 0xE9:
	case 0xEA:
	case 0xEB:
	case 0xEC:
	case 0xED:
	case 0xEE:
	case 0xEF:	goto yy79;
	case 0xF0:
	case 0xF1:
	case 0xF2:
	case 0xF3:
	case 0xF4:
	case 0xF5:
	case 0xF6:
	case 0xF7:	goto yy80;
	default:	goto yy4;
	}
yy2:
	++s;
#line 133 "re2c-scanner-c.re"
	{ return TOKEN_EOF; }
#line 192 "re2c-scanner-c.cc"
yy4:
	++s;
yy5:
#line 135 "re2c-scanner-c.re"
	{ return TOKEN_ILLEGAL_CHAR; }
#line 198 "re2c-scanner-c.cc"
yy6:
	++s;
#line 58 "re2c-scanner-c.re"
	{ return TOKEN_TAB; }
#line 203 "re2c-scanner-c.cc"
yy8:
	++s;
#line 57 "re2c-scanner-c.re"
	{ return TOKEN_NEWLINE; }
#line 208 "re2c-scanner-c.cc"
yy10:
	++s;
#line 59 "re2c-scanner-c.re"
	{ return TOKEN_CRETURN; }
#line 213 "re2c-scanner-c.cc"
yy12:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case ' ':	goto yy12;
	default:	goto yy14;
	}
yy14:
#line 56 "re2c-scanner-c.re"
	{ return TOKEN_SPACE; }
#line 225 "re2c-scanner-c.cc"
yy15:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy81;
	default:	goto yy16;
	}
yy16:
#line 88 "re2c-scanner-c.re"
	{ return TOKEN_EXCLAM; }
#line 235 "re2c-scanner-c.cc"
yy17:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x00:
	case '\n':	goto yy5;
	default:	goto yy84;
	}
yy18:
	++s;
#line 124 "re2c-scanner-c.re"
	{ return TOKEN_HASH; }
#line 248 "re2c-scanner-c.cc"
yy20:
	++s;
#line 130 "re2c-scanner-c.re"
	{ return TOKEN_DOLLAR; }
#line 253 "re2c-scanner-c.cc"
yy22:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy90;
	default:	goto yy23;
	}
yy23:
#line 109 "re2c-scanner-c.re"
	{ return TOKEN_MOD; }
#line 263 "re2c-scanner-c.cc"
yy24:
	yych = *++s;
	switch (yych) {
	case '&':	goto yy92;
	case '=':	goto yy94;
	default:	goto yy25;
	}
yy25:
#line 96 "re2c-scanner-c.re"
	{ return TOKEN_AND; }
#line 274 "re2c-scanner-c.cc"
yy26:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x00:
	case '\n':	goto yy5;
	default:	goto yy97;
	}
yy27:
	++s;
#line 61 "re2c-scanner-c.re"
	{ return TOKEN_L_PAREN; }
#line 287 "re2c-scanner-c.cc"
yy29:
	++s;
#line 62 "re2c-scanner-c.re"
	{ return TOKEN_R_PAREN; }
#line 292 "re2c-scanner-c.cc"
yy31:
	yych = *++s;
	switch (yych) {
	case '/':	goto yy100;
	case '=':	goto yy102;
	default:	goto yy32;
	}
yy32:
#line 108 "re2c-scanner-c.re"
	{ return TOKEN_MULT; }
#line 303 "re2c-scanner-c.cc"
yy33:
	yych = *++s;
	switch (yych) {
	case '+':	goto yy104;
	case '=':	goto yy106;
	default:	goto yy34;
	}
yy34:
#line 105 "re2c-scanner-c.re"
	{ return TOKEN_PLUS; }
#line 314 "re2c-scanner-c.cc"
yy35:
	++s;
#line 92 "re2c-scanner-c.re"
	{ return TOKEN_COMMA; }
#line 319 "re2c-scanner-c.cc"
yy37:
	yych = *++s;
	switch (yych) {
	case '-':	goto yy108;
	case '=':	goto yy110;
	case '>':	goto yy112;
	default:	goto yy38;
	}
yy38:
#line 106 "re2c-scanner-c.re"
	{ return TOKEN_MINUS; }
#line 331 "re2c-scanner-c.cc"
yy39:
	yych = *++s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy114;
	default:	goto yy40;
	}
yy40:
#line 94 "re2c-scanner-c.re"
	{ return TOKEN_FULL_STOP; }
#line 350 "re2c-scanner-c.cc"
yy41:
	yych = *++s;
	switch (yych) {
	case '*':	goto yy117;
	case '/':	goto yy119;
	case '=':	goto yy121;
	default:	goto yy42;
	}
yy42:
#line 107 "re2c-scanner-c.re"
	{ return TOKEN_DIV; }
#line 362 "re2c-scanner-c.cc"
yy43:
	yyaccept = 1;
	yych = *(m = ++s);
	switch (yych) {
	case '.':	goto yy114;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	case 'D':
	case 'E':
	case 'F':
	case 'd':
	case 'e':
	case 'f':	goto yy115;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy125;
	case 'x':	goto yy127;
	default:	goto yy44;
	}
yy44:
#line 52 "re2c-scanner-c.re"
	{ return TOKEN_INTEGER; }
#line 394 "re2c-scanner-c.cc"
yy45:
	yyaccept = 1;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
	switch (yych) {
	case '.':	goto yy114;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	case 'D':
	case 'E':
	case 'd':
	case 'e':	goto yy123;
	case 'F':
	case 'f':	goto yy124;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy125;
	default:	goto yy44;
	}
yy47:
	yych = *++s;
	switch (yych) {
	case ':':	goto yy128;
	default:	goto yy48;
	}
yy48:
#line 90 "re2c-scanner-c.re"
	{ return TOKEN_COLON; }
#line 433 "re2c-scanner-c.cc"
yy49:
	++s;
#line 93 "re2c-scanner-c.re"
	{ return TOKEN_SEMICOLON; }
#line 438 "re2c-scanner-c.cc"
yy51:
	yych = *++s;
	switch (yych) {
	case '<':	goto yy130;
	case '=':	goto yy132;
	default:	goto yy52;
	}
yy52:
#line 77 "re2c-scanner-c.re"
	{ return TOKEN_LESS; }
#line 449 "re2c-scanner-c.cc"
yy53:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy134;
	default:	goto yy54;
	}
yy54:
#line 70 "re2c-scanner-c.re"
	{ return TOKEN_EQUAL; }
#line 459 "re2c-scanner-c.cc"
yy55:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy136;
	case '>':	goto yy138;
	default:	goto yy56;
	}
yy56:
#line 78 "re2c-scanner-c.re"
	{ return TOKEN_GREATER; }
#line 470 "re2c-scanner-c.cc"
yy57:
	++s;
#line 89 "re2c-scanner-c.re"
	{ return TOKEN_QUESTION; }
#line 475 "re2c-scanner-c.cc"
yy59:
	yyaccept = 2;
	m = ++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy59;
	case 0xC0:
	case 0xC1:
	case 0xC2:
	case 0xC3:
	case 0xC4:
	case 0xC5:
	case 0xC6:
	case 0xC7:
	case 0xC8:
	case 0xC9:
	case 0xCA:
	case 0xCB:
	case 0xCC:
	case 0xCD:
	case 0xCE:
	case 0xCF:
	case 0xD0:
	case 0xD1:
	case 0xD2:
	case 0xD3:
	case 0xD4:
	case 0xD5:
	case 0xD6:
	case 0xD7:
	case 0xD8:
	case 0xD9:
	case 0xDA:
	case 0xDB:
	case 0xDC:
	case 0xDD:
	case 0xDE:
	case 0xDF:	goto yy140;
	case 0xE0:
	case 0xE1:
	case 0xE2:
	case 0xE3:
	case 0xE4:
	case 0xE5:
	case 0xE6:
	case 0xE7:
	case 0xE8:
	case 0xE9:
	case 0xEA:
	case 0xEB:
	case 0xEC:
	case 0xED:
	case 0xEE:
	case 0xEF:	goto yy141;
	case 0xF0:
	case 0xF1:
	case 0xF2:
	case 0xF3:
	case 0xF4:
	case 0xF5:
	case 0xF6:
	case 0xF7:	goto yy142;
	default:	goto yy61;
	}
yy61:
#line 51 "re2c-scanner-c.re"
	{ return TOKEN_IDENTIFIER; }
#line 606 "re2c-scanner-c.cc"
yy62:
	++s;
#line 67 "re2c-scanner-c.re"
	{ return TOKEN_L_BRACKET; }
#line 611 "re2c-scanner-c.cc"
yy64:
	++s;
#line 131 "re2c-scanner-c.re"
	{ return TOKEN_BACKSLASH; }
#line 616 "re2c-scanner-c.cc"
yy66:
	++s;
#line 68 "re2c-scanner-c.re"
	{ return TOKEN_R_BRACKET; }
#line 621 "re2c-scanner-c.cc"
yy68:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy143;
	default:	goto yy69;
	}
yy69:
#line 100 "re2c-scanner-c.re"
	{ return TOKEN_POW; }
#line 631 "re2c-scanner-c.cc"
yy70:
	++s;
#line 64 "re2c-scanner-c.re"
	{ return TOKEN_L_BRACE; }
#line 636 "re2c-scanner-c.cc"
yy72:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy145;
	case '|':	goto yy147;
	default:	goto yy73;
	}
yy73:
#line 98 "re2c-scanner-c.re"
	{ return TOKEN_OR; }
#line 647 "re2c-scanner-c.cc"
yy74:
	++s;
#line 65 "re2c-scanner-c.re"
	{ return TOKEN_R_BRACE; }
#line 652 "re2c-scanner-c.cc"
yy76:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy149;
	default:	goto yy77;
	}
yy77:
#line 87 "re2c-scanner-c.re"
	{ return TOKEN_TILDE; }
#line 662 "re2c-scanner-c.cc"
yy78:
	yych = *++s;
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy59;
	default:	goto yy5;
	}
yy79:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy140;
	default:	goto yy5;
	}
yy80:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy141;
	default:	goto yy5;
	}
yy81:
	++s;
#line 84 "re2c-scanner-c.re"
	{ return TOKEN_NOT_EQUAL; }
#line 876 "re2c-scanner-c.cc"
yy83:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy84:
	switch (yych) {
	case 0x00:
	case '\n':	goto yy85;
	case '"':	goto yy86;
	case '\\':	goto yy88;
	default:	goto yy83;
	}
yy85:
	s = m;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 	goto yy44;
	case 2: 	goto yy61;
	case 3: 	goto yy116;
	default:	goto yy87;
	}
yy86:
	++s;
yy87:
#line 54 "re2c-scanner-c.re"
	{ return TOKEN_STRING; }
#line 903 "re2c-scanner-c.cc"
yy88:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy85;
	case '"':	goto yy151;
	case '\\':	goto yy88;
	default:	goto yy83;
	}
yy90:
	++s;
#line 119 "re2c-scanner-c.re"
	{ return TOKEN_MOD_EQUAL; }
#line 919 "re2c-scanner-c.cc"
yy92:
	++s;
#line 97 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_AND; }
#line 924 "re2c-scanner-c.cc"
yy94:
	++s;
#line 111 "re2c-scanner-c.re"
	{ return TOKEN_AND_EQUAL; }
#line 929 "re2c-scanner-c.cc"
yy96:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy97:
	switch (yych) {
	case 0x00:
	case '\n':	goto yy85;
	case '\'':	goto yy86;
	case '\\':	goto yy98;
	default:	goto yy96;
	}
yy98:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy85;
	case '\'':	goto yy152;
	case '\\':	goto yy98;
	default:	goto yy96;
	}
yy100:
	++s;
#line 128 "re2c-scanner-c.re"
	{ return TOKEN_C_COMMENT_END; }
#line 957 "re2c-scanner-c.cc"
yy102:
	++s;
#line 118 "re2c-scanner-c.re"
	{ return TOKEN_MULT_EQUAL; }
#line 962 "re2c-scanner-c.cc"
yy104:
	++s;
#line 102 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_PLUS; }
#line 967 "re2c-scanner-c.cc"
yy106:
	++s;
#line 115 "re2c-scanner-c.re"
	{ return TOKEN_PLUS_EQUAL; }
#line 972 "re2c-scanner-c.cc"
yy108:
	++s;
#line 103 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_MINUS; }
#line 977 "re2c-scanner-c.cc"
yy110:
	++s;
#line 116 "re2c-scanner-c.re"
	{ return TOKEN_MINUS_EQUAL; }
#line 982 "re2c-scanner-c.cc"
yy112:
	++s;
#line 72 "re2c-scanner-c.re"
	{ return TOKEN_MINUS_GREATER; }
#line 987 "re2c-scanner-c.cc"
yy114:
	yyaccept = 3;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
yy115:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy114;
	case 'D':
	case 'E':
	case 'd':
	case 'e':	goto yy123;
	case 'F':
	case 'L':
	case 'f':
	case 'l':	goto yy124;
	default:	goto yy116;
	}
yy116:
#line 53 "re2c-scanner-c.re"
	{ return TOKEN_FLOAT; }
#line 1018 "re2c-scanner-c.cc"
yy117:
	++s;
#line 127 "re2c-scanner-c.re"
	{ return TOKEN_C_COMMENT_START; }
#line 1023 "re2c-scanner-c.cc"
yy119:
	++s;
#line 126 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_DIV; }
#line 1028 "re2c-scanner-c.cc"
yy121:
	++s;
#line 117 "re2c-scanner-c.re"
	{ return TOKEN_DIV_EQUAL; }
#line 1033 "re2c-scanner-c.cc"
yy123:
	yych = *++s;
	switch (yych) {
	case '+':
	case '-':	goto yy153;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy154;
	default:	goto yy85;
	}
yy124:
	++s;
	goto yy116;
yy125:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy125;
	default:	goto yy44;
	}
yy127:
	yych = *++s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy156;
	default:	goto yy85;
	}
yy128:
	++s;
#line 91 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_COLON; }
#line 1084 "re2c-scanner-c.cc"
yy130:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy158;
	default:	goto yy131;
	}
yy131:
#line 74 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_LESS; }
#line 1094 "re2c-scanner-c.cc"
yy132:
	++s;
#line 80 "re2c-scanner-c.re"
	{ return TOKEN_LE; }
#line 1099 "re2c-scanner-c.cc"
yy134:
	++s;
#line 83 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_EQUAL; }
#line 1104 "re2c-scanner-c.cc"
yy136:
	++s;
#line 81 "re2c-scanner-c.re"
	{ return TOKEN_GE; }
#line 1109 "re2c-scanner-c.cc"
yy138:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy160;
	default:	goto yy139;
	}
yy139:
#line 75 "re2c-scanner-c.re"
	{ return TOKEN_DOUBLE_GREATER; }
#line 1119 "re2c-scanner-c.cc"
yy140:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy59;
	default:	goto yy85;
	}
yy141:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy140;
	default:	goto yy85;
	}
yy142:
	++s;
